# service_offer_generation

./: Dockerfile  README.md  data_handler.py  docker-compose.yml  entrypoint.sh  generate_data.py  initialize_database.py  main.py  migrate_json_to_postgres.py  migrate_json_to_sqlite.py  models.py  offers.json  offers.sqlite  pyproject.toml  requirements.txt  verify_inmemory_spatialite.py  verify_postgres_postgis.py  verify_spatialite.py  verify_spatialite_cli_init.py  verify_spatialite_cli_init_v2.py  verify_spatialite_cli_setup.py  verify_spatialite_final.py  verify_spatialite_std.py
templates/: base.html  offer_detail.html  offer_form.html  offers_list.html
