[project]
name = "service-offer-generation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
    "markupsafe>=3.0.2",
    "typing>=3.10.0.0",
    "datetime>=5.5",
    "psycopg2-binary>=2.9.10",
]
